--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3.6'
+version: "3.6"
 
 services:
-   
-    redis:
-      image: 'bitnami/redis:latest'
+  redis:
+    image: "bitnami/redis:latest"
 
-      ports:
-        - 6379:6379
+    ports:
+      - 6379:6379
 
-      environment:
-          - ALLOW_EMPTY_PASSWORD=yes
+    environment:
+      - REDIS_PASSWORD=password123
